python-compiler/tests/snapshots/strings__string_with_quotes.snap
---
source: tests/strings.rs
expression: llvm_ir
---
; ModuleID = 'main'
source_filename = "main"

@str_literal = private unnamed_addr constant [17 x i8] c"She said \22Hello\22\00", align 1

; Function Attrs: nounwind
define noundef i32 @main() local_unnamed_addr #0 {
entry:
  %malloc_str = tail call dereferenceable_or_null(17) ptr @malloc(i64 17)
  tail call void @llvm.memcpy.p0.p0.i64(ptr noundef nonnull align 1 dereferenceable(17) %malloc_str, ptr noundef nonnull align 1 dereferenceable(17) @str_literal, i64 17, i1 false)
  %ptr_to_int = ptrtoint ptr %malloc_str to i64
  %ptr_payload = and i64 %ptr_to_int, 281474976710655
  %payload_to_ptr = inttoptr i64 %ptr_payload to ptr
  %puts = tail call i32 @puts(ptr nonnull dereferenceable(1) %payload_to_ptr)
  tail call void @free(ptr %malloc_str)
  ret i32 0
}

; Function Attrs: mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite)
declare noalias noundef ptr @malloc(i64 noundef) local_unnamed_addr #1

; Function Attrs: mustprogress nounwind willreturn allockind("free") memory(argmem: readwrite, inaccessiblemem: readwrite)
declare void @free(ptr allocptr nocapture noundef) local_unnamed_addr #2

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: readwrite)
declare void @llvm.memcpy.p0.p0.i64(ptr noalias nocapture writeonly, ptr noalias nocapture readonly, i64, i1 immarg) #3

; Function Attrs: nofree nounwind
declare noundef i32 @puts(ptr nocapture noundef readonly) local_unnamed_addr #4

attributes #0 = { nounwind }
attributes #1 = { mustprogress nofree nounwind willreturn allockind("alloc,uninitialized") allocsize(0) memory(inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #2 = { mustprogress nounwind willreturn allockind("free") memory(argmem: readwrite, inaccessiblemem: readwrite) "alloc-family"="malloc" }
attributes #3 = { nocallback nofree nounwind willreturn memory(argmem: readwrite) }
attributes #4 = { nofree nounwind }
